Add SafeBootstrapCommitter and refactor LuceneCommitter
Signed-off-by: rayshrey <rayshrey@amazon.com>